[package]
name = "browserslist-rs"
version = "0.17.0"
authors = ["Pig Fang <g-plane@hotmail.com>"]
edition = "2021"
description = "Rust-ported Browserslist."
repository = "https://github.com/browserslist/browserslist-rs"
license = "MIT"
keywords = ["web", "javascript"]
categories = ["web-programming", "config"]
include = ["**/*.rs", "Cargo.toml", "src/generated/**/*.json"]

[lib]
name = "browserslist"
crate-type = ["cdylib", "rlib"]

[features]
wasm_bindgen = [
    "chrono/wasmbind",
    "getrandom",
    "getrandom/js",
    "js-sys",
    "serde-wasm-bindgen",
    "wasm-bindgen",
]

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
chrono = { version = "0.4.38", features = [
    "std",
    "clock",
    "oldtime",
], default-features = false } # disable wasmbind by default
either = "1.13"
indexmap = { version = "2.6", features = ["serde"] }
itertools = "0.13"
nom = "7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
test-case = "3.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[workspace]
members = [".", "generate-data"]
