[package]
name = "browserslist-data"
version = "0.1.1"
authors = ["Pig Fang <g-plane@hotmail.com>"]
edition = "2021"
description = "Data for browserslist-rs."
repository = "https://github.com/browserslist/browserslist-rs"
license = "MIT"
include = [
    "**/*.rs",
    "Cargo.toml",
    "src/generated/info.txt",
    "src/generated/**/*.bin",
    "src/generated/**/*.u32seq",
]

[dependencies]
ahash = { workspace = true }
chrono = { workspace = true }
